--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,43 @@
 
 	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
+	
+	{{!-- CUSTOM ELEMENTS ADDED BY: https://twitter.com/askpascalandy SEE BELOW --}}
+
+	<!-- CSS Buttons (unicorn-ui) -->
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_unicorn/buttons.min.css"}}" />
+	
+	<!-- To Test - https://bulma.io/documentation/elements/button/ -->
+
+	{{!-- CSS Grid and Tables --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_simplegrid/simplegrid.min.css"}}" />
+	
+	{{!-- CSS Icon via fontawesome 5 --}}
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
+  	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/v4-shims.js"></script>
+
+	{{!-- CSS Code Syntax (highlight agate)
+	Line number is not supported > http://highlightjs.readthedocs.io/en/latest/line-numbers.html --}}
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/agate.min.css">  
+	<style>  
+	  pre {
+		word-wrap: normal;
+		-moz-hyphens: none;
+		-ms-hyphens: none;
+		-webkit-hyphens: none;
+		hyphens: none;
+		font-size: 0.85em;
+		line-height: 1.4em;
+		padding-top: 0.5em;
+		padding-bottom: 0.5em;
+	  }
+		pre code, pre tt {
+		white-space: pre;
+	  }
+	</style>
+
+	{{!-- CUSTOM ELEMENTS ADDED BY: https://twitter.com/askpascalandy SEE ABOVE --}}
+
 	{{ghost_head}}
 </head>
 
@@ -35,6 +72,12 @@
 
 	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
 
+	{{!-- CUSTOM ELEMENTS ADDED BY: https://twitter.com/askpascalandy SEE BELOW --}}
+	
+	{{!-- Code Syntax (highlight) --}}
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+	
 	{{ghost_foot}}
 
 </body>
