--- a/default.hbs
+++ b/default.hbs
@@ -17,11 +17,10 @@
 	<!-- CSS Buttons (unicorn-ui) -->
     <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_unicorn/buttons.min.css"}}" />
 	
-	<!-- To Test - https://bulma.io/documentation/elements/button/ -->
-
-	{{!-- CSS Grid and Tables --}}
+	{{!-- CSS Grid and Tables 
     <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_simplegrid/simplegrid.min.css"}}" />
-	
+	Bypassed as it conflicts with other button class --}}
+
 	{{!-- CSS Icon via fontawesome 5 --}}
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
   	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/v4-shims.js"></script>
