--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,41 @@
 
 	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
+	{{!-- SEE BELOW / CUSTOM ELEMENTS ADDED BY:
+	   -- https://pascalandy.com/blog/now/      --}}
+
+	<!-- CSS Buttons (unicorn-ui) -->
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_unicorn/buttons.min.css"}}" />
+	
+	{{!-- CSS Grid and Tables --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_simplegrid/simplegrid.min.css"}}" />
+	
+	{{!-- CSS Icon via fontawesome 5 --}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
+
+	{{!-- CSS Code Syntax (highlight agate)
+	Line number is not supported > http://highlightjs.readthedocs.io/en/latest/line-numbers.html --}}
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/agate.min.css">  
+	<style>  
+	  pre {
+		word-wrap: normal;
+		-moz-hyphens: none;
+		-ms-hyphens: none;
+		-webkit-hyphens: none;
+		hyphens: none;
+		font-size: 0.85em;
+		line-height: 1.4em;
+		padding-top: 0.5em;
+		padding-bottom: 0.5em;
+	  }
+		pre code, pre tt {
+		white-space: pre;
+	  }
+	</style>
+
+	{{!-- SEE ABOVE / CUSTOM ELEMENTS ADDED BY: --}}
+
 	{{ghost_head}}
 </head>
 
@@ -34,6 +69,14 @@
 	</section>
 
 	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
+
+	{{!-- SEE BELOW / CUSTOM ELEMENTS ADDED BY: --}}
+
+	{{!-- Code Syntax (highlight) --}}
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+
+	{{!-- SEE ABOVE / CUSTOM ELEMENTS ADDED BY: --}}
 
 	{{ghost_foot}}
 
