--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
 	<meta name="HandheldFriendly" content="True" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/style.min.css"}}" />
 
 	{{!-- SEE BELOW / CUSTOM ELEMENTS ADDED BY:
 	   -- https://pascalandy.com/blog/now/      --}}
