--- a/default.hbs
+++ b/default.hbs
@@ -1,84 +1,86 @@
 <!DOCTYPE html>
 <html lang="{{lang}}">
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>{{meta_title}}</title>
+    <title>{{meta_title}}</title>
 
-	<meta name="HandheldFriendly" content="True" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="{{asset "css/style.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
-	{{!-- SEE BELOW / CUSTOM ELEMENTS ADDED BY:
-	   -- https://pascalandy.com/blog/now/      --}}
+    <!-- SEE BELOW /// CUSTOM ELEMENTS ///
+         ADDED BY: https://pascalandy.com/blog/now/ -->
 
-	<!-- CSS Buttons (unicorn-ui) -->
+    <!-- CSS Buttons (unicorn-ui) -->
     <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_unicorn/buttons.min.css"}}" />
-	
-	{{!-- CSS Grid and Tables --}}
+    
+    <!-- CSS Grid and Tables
     <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/css_simplegrid/simplegrid.min.css"}}" />
-	
-	{{!-- CSS Icon via fontawesome 5 --}}
+    -->
+    
+    <!-- CSS Icon via fontawesome 5 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
 
-	{{!-- CSS Code Syntax (highlight agate)
-	Line number is not supported > http://highlightjs.readthedocs.io/en/latest/line-numbers.html --}}
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/agate.min.css">  
-	<style>  
-	  pre {
-		word-wrap: normal;
-		-moz-hyphens: none;
-		-ms-hyphens: none;
-		-webkit-hyphens: none;
-		hyphens: none;
-		font-size: 0.85em;
-		line-height: 1.4em;
-		padding-top: 0.5em;
-		padding-bottom: 0.5em;
-	  }
-		pre code, pre tt {
-		white-space: pre;
-	  }
-	</style>
+    <!-- CSS Code Syntax (highlight agate)
+    Line number is not supported > http://highlightjs.readthedocs.io/en/latest/line-numbers.html -->
 
-	{{!-- SEE ABOVE / CUSTOM ELEMENTS ADDED BY: --}}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/agate.min.css">  
+    <style>  
+      pre {
+        word-wrap: normal;
+        -moz-hyphens: none;
+        -ms-hyphens: none;
+        -webkit-hyphens: none;
+        hyphens: none;
+        font-size: 0.85em;
+        line-height: 1.4em;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+      }
+        pre code, pre tt {
+        white-space: pre;
+      }
+    </style>
 
-	{{ghost_head}}
+    <!-- SEE ABOVE /// CUSTOM ELEMENTS /// -->
+
+    {{ghost_head}}
 </head>
 
 <body class="{{body_class}}">
 
-	{{navigation}}
+    {{navigation}}
 
-	<section id="wrapper">
-		<a class="hidden-close"></a>
-		{{{body}}}
-		<div id="body-class" style="display: none;" class="{{body_class}}"></div>
+    <section id="wrapper">
+        <a class="hidden-close"></a>
+        {{{body}}}
+        <div id="body-class" style="display: none;" class="{{body_class}}"></div>
 
-		<footer id="footer">
-			<div class="inner">
-				<section class="credits">
-					<span class="credits-theme">{{t "Theme" }} <a href="https://github.com/zutrinken/attila">Attila</a> {{t "by"}} <a href="http://zutrinken.com" rel="nofollow">zutrinken</a></span>
-					<span class="credits-software">{{t "Published with"}} <a href="http://ghost.org">Ghost</a></span>
-				</section>
-			</div>
-		</footer>
-	</section>
+        <footer id="footer">
+            <div class="inner">
+                <section class="credits">
+                    <span class="credits-theme">{{t "Theme" }} <a href="https://github.com/zutrinken/attila">Attila</a> {{t "by"}} <a href="http://zutrinken.com" rel="nofollow">zutrinken</a></span>
+                    <span class="credits-software">{{t "Published with"}} <a href="http://ghost.org">Ghost</a></span>
+                </section>
+            </div>
+        </footer>
+    </section>
 
-	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/script.js"}}"></script>
 
-	{{!-- SEE BELOW / CUSTOM ELEMENTS ADDED BY: --}}
+    <!-- SEE BELOW /// CUSTOM ELEMENTS /// -->
 
-	{{!-- Code Syntax (highlight) --}}
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-	<script>hljs.initHighlightingOnLoad();</script>
+    <!-- Code Syntax (highlight) -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
-	{{!-- SEE ABOVE / CUSTOM ELEMENTS ADDED BY: --}}
+    <!-- SEE ABOVE /// CUSTOM ELEMENTS /// -->
 
-	{{ghost_foot}}
+    {{ghost_foot}}
 
 </body>
 </html>
