--- a/assets/css_firepress/entry.css
+++ b/assets/css_firepress/entry.css
@@ -1,15 +1,22 @@
-/*  entry
+/*  ==========================================================================
+    entry
     is the entrypoint from default.hbs
 
     btn_a, btn_b, btn_c are button styles
     We do this is order to avoid CSS conflict (which happens all the time with the 'button' style)
-/* ---------------------------------------------------------- */
+*/
+
+
+/*  ==========================================================================
+    bypass
 
 @import "btn_a_var.css";
 @import "btn_a.min.css";
 @import "btn_b.min.css";
 @import "btn_c.min.css";
 @import "simplegrid.min.css";
+*/
+
 
 /*  ==========================================================================
     btnfire.css / reserved for stuff in dev
